# hanky

./: .bumpversion.toml  .pre-commit-config.yaml  LICENSE  Phrases.xlsx  README.md  ankigen.py  demo.py  example_conf.yaml  french.py  french_gen.sh  german.py  german.sh  italian.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
demo/: demo.py  demo_audio.py  demo_define.py  demo_example_sentences.py  demo_lowercase.py  demo_random_words.py  demo_scrape.py  requirements.txt
demo/audio/: demo_audio.py  requirements.txt
demo/define/: demo_define.py  requirements.txt
demo/example_sentences/: demo_example_sentences.py  requirements.txt
demo/highlight_words/: demo_highlight_words.py  requirements.txt
demo/lowercase/: demo_lowercase.py
demo/random_words/: demo_random_words.py
demo/scrape/: demo_scrape.py  requirements.txt
hanki/text_to_speech/: Voices.py
src/: LanguageModel.py  ModelBuilder.py  NoteBuilder.py  ankigen.py  cml.py  load_deck.py  text_to_speech.py
src/hanki/: __init__.py  __main__.py  cli.py  config.py  hanki.py
src/hanki/text_to_speech/: Voices.py
src/hanki/utils/: __init__.py  loaders.py
src/hanky/: ModelProcessor.py  __init__.py  __main__.py  anki_utils.py  cli.py  config.py  errors.py  fs.py  hanky.py  media.py  processors.py  report.py
tests/: conftest.py  test_anki_utils.py  test_backup.py  test_card_processor.py  test_cli.py  test_config.py  test_deprecations.py  test_dry_run.py  test_fs.py  test_hanky.py  test_hanky_config.py  test_load.py  test_load_dir.py  test_load_media.py  test_loaders.py  test_media.py  test_model_processor.py  test_report.py  test_session.py  test_verbose.py
