[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hanky"
authors = [{ name = "HBA", email = "hanky-pypi.8ebs0@simplelogin.com" }]
description = "Simple library and command line tool for loading flash cards into anki."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: Unix",
]

keywords = ["anki"]
dynamic = ["version"]

dependencies = [
  "anki",
  "psutil",
  "aqt"
]

[project.optional-dependencies]
tos = [
  "boto3"
]

[project.scripts]
hanky = "hanky.__main__:main"

[project.urls]
Homepage = "https://github.com/Haeata-Ash/hanky"
Issues = "https://github.com/Haeata-Ash/hanky/issues"

# Development dependencies, managed by uv (PEP 735 dependency groups).
# Installed by default with `uv sync`.
[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "types-psutil",
  "pre-commit",
]

# --- Build backend (hatchling) -------------------------------------------
# uv drives the project/dev workflow, but hatchling stays as the PEP 517
# build backend because it supplies the dynamic version read from
# src/hanky/__about__.py. uv calls this backend for `uv build`/`uv publish`.

[tool.hatch.version]
path = "src/hanky/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
  "/.venv",
  "/.mypy_cache",
  "/demo",
  "/.*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/hanky"]