[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hanky"
authors = [{ name = "HBA", email = "hanky-pypi.8ebs0@simplelogin.com" }]
description = "Simple library and command line tool for loading flash cards into anki."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: Unix",
]

keywords = ["anki"]

dependencies = [
  "anki",
  "psutil",
]

dynamic = ["version"]

[project.scripts]
hanky = "hanky.__main__:main"

[project.urls]
Homepage = "https://github.com/Haeata-Ash/hanky"
Issues = "https://github.com/Haeata-Ash/hanky/issues"

# Development dependencies, managed by uv (PEP 735 dependency groups).
# Installed by default with `uv sync`.
[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "ruff",
  "types-psutil",
  "pre-commit",
]

[tool.uv]
default-groups = "all"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
  "/.venv",
  "/.mypy_cache",
  "/demo",
  "/.*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/hanky"]
